# python-project-50

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  json_to_yml.py  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  python_test.yml
gendiff/: format_maker.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/modules/: argparse_module.py  gendiff.py  gendiff_module.py  generate_uniq_keys.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_flat.py  test_formatters.py  test_json.py  test_nested.py  test_parser.py  test_plain.py  test_run_argparse.py  test_wrong_arguments.py
tests/fixtures/: file_3.json  file_4.json  json_fixture.txt  json_nested_fixture.txt
